# embo_lib

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
include/: embo_lib.hh
src/: embo_lib.cc
test/: embo_lib_test.cc
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: embo_app.cc
